@@ -11,12 +11,15 @@ import com.ssafy.enjoytrip.global.error.exception.NotFoundMemberException;
 import com.ssafy.enjoytrip.global.error.exception.SelfFollowException;
 import com.ssafy.enjoytrip.global.util.AuthenticationUtil;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -67,21 +70,30 @@ public class FollowService {
         return true;
     }
 
-    public List<FollowDto> getFollowing(Long memberSeq) {
-        List<Follow> followingList = followRepository.findFollowedList(memberSeq);
-        Member me = getMember();
-        return followingList.stream().map(follow ->
-                follow.followToDto(followRepository.existsByFollowMember_SeqAndFollowedMember_Seq(me.getSeq(), follow.getFollowedMember().getSeq()))
-        ).toList();
+    public List<FollowDto> getFollowing(Long memberSeq, Pageable pageable) {
+        Page<Follow> pages = followRepository.findAllByFollowMember_Seq(memberSeq, pageable).orElseThrow(() -> new NotFoundMemberException(CommonErrorCode.NOT_FOUND_MEMBER));
+
+        List<Follow> followList = pages.getContent().stream().collect(Collectors.toList());
+        List<FollowDto> followDtoList = new ArrayList<>();
+
+        for (Follow follow : followList) {
+            followDtoList.add(follow.followedToDto(true));
+        }
+
+        return followDtoList;
     }
 
-    public List<FollowDto> getFollower(Long memberSeq) {
-        List<Follow> followerList = followRepository.findFollowList(memberSeq);
-        Member me = getMember();
+    public List<FollowDto> getFollower(Long memberSeq, Pageable pageable) {
+        Page<Follow> pages = followRepository.findAllByFollowedMember_Seq(memberSeq, pageable).orElseThrow(() -> new NotFoundMemberException(CommonErrorCode.NOT_FOUND_MEMBER));
 
-        return followerList.stream().map(follow ->
-                follow.followToDto(followRepository.existsByFollowMember_SeqAndFollowedMember_Seq(me.getSeq(), follow.getFollowedMember().getSeq()))
-        ).toList();
+        List<Follow> followList = pages.getContent().stream().collect(Collectors.toList());
+        List<FollowDto> followedDtoList = new ArrayList<>();
+
+        for (Follow follow : followList) {
+            followedDtoList.add(follow.followToDto(true));
+        }
+
+        return followedDtoList;
     }
 
     private Follow getFollowMemberFollowedMember(Long memberSeq, Long followedMemberSeq) {
@@ -98,8 +110,14 @@ public class FollowService {
 
         return follow;
     }
+
+    public boolean isFollow(Long followMemberSeq, Long memberSeq) {
+        return followRepository.existsByFollowMember_SeqAndFollowedMember_Seq(followMemberSeq,memberSeq);
+    }
+
     public Member getMember(){
         String userName = AuthenticationUtil.authenticationGetUsername();
         return memberRepository.findByName(userName).orElseThrow(() -> new NotFoundMemberException(CommonErrorCode.NOT_FOUND_MEMBER));
     }
+
 }
